# licensecxx

./: .buildinfo  .clang-format  .gitguardian.yml  .gitignore  .gitmodules  CMakeLists.txt  How-to-use-it.html  Identifiers.html  LICENSE  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
.github/: full-build-mac.yml  full-build-windows.yml
_sources/: How-to-use-it.rst.txt  Identifiers.rst.txt
api/: classlcxx_1_1license.html  dir__home_runner_work_licensecxx_licensecxx_modules.html  dir__home_runner_work_licensecxx_licensecxx_modules_crypto.html  dir__home_runner_work_licensecxx_licensecxx_modules_crypto_include.html  dir__home_runner_work_licensecxx_licensecxx_modules_crypto_include_lcxx.html  dir__home_runner_work_licensecxx_licensecxx_modules_crypto_src.html  dir__home_runner_work_licensecxx_licensecxx_modules_ident_utils.html  dir__home_runner_work_licensecxx_licensecxx_modules_ident_utils_include.html  dir__home_runner_work_licensecxx_licensecxx_modules_ident_utils_include_ident_utils.html  dir__home_runner_work_licensecxx_licensecxx_modules_ident_utils_src.html  dir__home_runner_work_licensecxx_licensecxx_modules_identifiers.html  dir__home_runner_work_licensecxx_licensecxx_modules_identifiers_include.html  dir__home_runner_work_licensecxx_licensecxx_modules_identifiers_include_lcxx.html  dir__home_runner_work_licensecxx_licensecxx_modules_identifiers_include_lcxx_identifiers.html  dir__home_runner_work_licensecxx_licensecxx_modules_identifiers_src.html  dir__home_runner_work_licensecxx_licensecxx_modules_lcxx.html  (+101 more)
cmake/: get_fmt_lib.cmake  get_version.cmake  (+2 more)
docs/: pyproject.toml
docs/Doxygen/: Doxyfile-prj.cfg  Doxyfile.cfg  pyproject.toml
docs/Sphinx/source/: How-to-use-it.rst  Identifiers.rst  Network-Licensing.rst  conf.py  index.rst
modules/base/: CMakeLists.txt  EventRegistry.cpp  base64.cpp  file_utils.cpp  logger.cpp  string_utils.cpp
modules/base/include/base/: EventRegistry.h  base.h  base64.h  file_utils.hpp  logger.h  string_utils.h
modules/client/: CMakeLists.txt
modules/client/include/lcxx/: client.hpp
modules/client/src/: client.cpp
modules/crypto/: CMakeLists.txt
modules/crypto/include/lcxx/: crypto.hpp  encoding.hpp  hash.hpp
modules/crypto/src/: crypto.cpp  encoding.cpp  hash.cpp
modules/hw_identifier/: CMakeLists.txt  default_strategy.cpp  default_strategy.hpp  disk_strategy.cpp  disk_strategy.hpp  ethernet.cpp  ethernet.hpp  hw_identifier.cpp  hw_identifier.hpp  hw_identifier_facade.cpp  hw_identifier_facade.hpp  identification_strategy.cpp  identification_strategy.hpp
modules/ident_utils/: CMakeLists.txt
modules/ident_utils/include/ident_utils/: common.hpp  common_mac.hpp  cpu_utils.hpp  os_utils.hpp
modules/ident_utils/src/: cpu_utils_linux.cpp  cpu_utils_mac.cpp  cpu_utils_win.cpp  os_utils_linux.cpp  os_utils_mac.cpp  os_utils_win.cpp
modules/identifiers/: CMakeLists.txt
modules/identifiers/include/lcxx/identifiers/: common.hpp  hardware.hpp  identifier.hpp  os.hpp  user.hpp
modules/identifiers/src/: hardware.cpp  os.cpp  user.cpp
modules/lcxx/: CMakeLists.txt
modules/lcxx/include/lcxx/: ConvertUTF.h  SimpleIni.h  datatypes.h  datatypes.hpp  lcxx.hpp  license.hpp  licensecxx.h  properties.h  reader.hpp  verifier.hpp  writer.hpp
modules/lcxx/src/: LicenseReader.cpp  inspector.cpp  reader.cpp  verifier.cpp  writer.cpp
modules/lcxx/src/limits/: license_verifier.cpp
modules/license/: CMakeLists.txt
modules/license/include/lcxx/: license.hpp
modules/licensecxx/: CMakeLists.txt
modules/licensecxx/include/lcxx/: LicenseReader.hpp  SimpleIni.h  datatypes.h  license_verifier.hpp  licensecxx.h  properties.h
modules/licensecxx/include/licensecxx/: datatypes.h
modules/licensecxx/src/: LicenseReader.cpp  LicenseReader.hpp  licensecxx.cpp
modules/licensecxx/src/ini/: ConvertUTF.cpp
modules/licensecxx/src/limits/: license_verifier.cpp
modules/locate/: ApplicationFolder.cpp  ApplicationFolder.hpp  CMakeLists.txt  EnvironmentVarData.cpp  EnvironmentVarData.hpp  EnvironmentVarLocation.cpp  EnvironmentVarLocation.hpp  ExternalDefinition.cpp  ExternalDefinition.hpp  LocatorFactory.cpp  LocatorFactory.hpp  LocatorStrategy.cpp  LocatorStrategy.hpp
modules/net_common/: CMakeLists.txt
modules/net_common/include/lcxx/: net_common.hpp
modules/openssl_wrappers/: CMakeLists.txt
modules/openssl_wrappers/include/lcxx/: aes.hpp  crypto_common.hpp  encoding.hpp  rsa.hpp
modules/openssl_wrappers/src/: aes.cpp  encoding.cpp  hash.cpp  rsa.cpp
modules/os/: CMakeLists.txt  execution_environment.hpp  execution_environment_common.cpp
modules/os/include/os/: cpu_info.hpp  dmi_info.hpp  execution_environment.hpp  network.hpp  os.h  signature_verifier.hpp
modules/os/linux/: cpu_info.cpp  dmi_info.cpp  execution_environment.cpp  network.cpp  os_linux.cpp
modules/os/openssl/: signature_verifier.cpp
modules/os/windows/: cpu_info.cpp  dmi_info.cpp  execution_environment.cpp  network.cpp  os_win.cpp  signature_verifier.cpp  smbios.hpp
modules/server/: CMakeLists.txt
modules/server/include/lcxx/: server.hpp
modules/server/src/: server.cpp
samples/: CMakeLists.txt
samples/client/: CMakeLists.txt  main.cpp
samples/file_based_server/: CMakeLists.txt  main.cpp
samples/ident_utils/: CMakeLists.txt  main.cpp
samples/license_generator/: CMakeLists.txt  main.cpp
samples/license_verifier/: CMakeLists.txt  main.cpp
samples/os_utils/: CMakeLists.txt  main.cpp
samples/resources/: certificate.pem  key.pem  private_key.rsa  signature_priv_key.rsa  signature_pub_key
samples/resources/licenses/: mylicense.json
tests/: CMakeLists.txt
tests/common/: fixtures.hpp  keys.hpp
tests/crypto/: CMakeLists.txt  crypto_test.cpp  hash_test.cpp
tests/identifiers/: CMakeLists.txt  identifiers_test.cpp
tests/lcxx/: CMakeLists.txt  lcxx_test.cpp
tests/network/: CMakeLists.txt  lcxx_network_test.cpp
tests/openssl_wrappers/: CMakeLists.txt  aes_test.cpp  base64_test.cpp  hash_test.cpp  rsa_test.cpp
tests/os_utils/: CMakeLists.txt
tests/resources/: certificate.pem
(+153 files in other folders)
