[tool.poetry]
name = "licensecxx"
version = "0.1.0"
description = "Software licensing, copy protection in C++"
authors = ["Felix <felixjulianheitmann@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
exhale = "^0.3.5"
breathe = "^4.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
